--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@
   
   body {
     margin: 0;
+    background-image: url('../src/assets/img/Fondo.jpg');
+    background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
